--- a/stylizing/templates/template.html
+++ b/stylizing/templates/template.html
@@ -2,61 +2,35 @@
 <html lang="en">
     <head>
     <meta charset="UTF-8">
-    <title>42's Skill Portfolio</title>
-    <link rel="icon" type="image/png" href="images/logo.png">
-    <link rel="stylesheet" href="portfolio.css">
+    <title>{{ student_name }}'s Portfolio</title>
+    <link rel="icon" type="image/png" href="static/images/logo.png">
+    <link rel="stylesheet" href="{{ url_for('static', filename='portfolio.css') }}">
     </head>
     <body class="main_grid">
     <header>
         <img src="https://www.42lisboa.com/wp-content/themes/42lisboa/images/logo_footer_en.svg" alt="42_logo">
     </header>
     <div class="pfp flex">
-        <img src="images/pfp.png" alt="Profile Picture" id="pfp"> <!-- profile picture -->
+        <img src="{{ small_image_url }}" alt="Profile Picture" id="pfp"> <!-- profile picture -->
     </div>
     <div class="identification flex">
 
     </div>
     <div class="contact flex">
-        <div class="contact_card">+351 963 019 007</div> <!-- phone nbr -->
-        <div class="contact_card">test.me@gmail.com</div> <!-- e-mail -->
+        <div class="contact_card">{{ phone }}</div> <!-- phone nbr -->
+        <div class="contact_card">{{ email }}</div> <!-- e-mail -->
     </div>
     <div class="projects flex">
         <div class="flex">
             <div class="project_card flex"> <!-- for each finished project -->
                 <p>libft</p> <!-- project name-->
-                <img class="bonus" src="images/star.svg" alt="Bonus"> <!-- if bonus was done -->
+                <img class="bonus" src="static/images/star.svg" alt="Bonus"> <!-- if bonus was done -->
             </div>
             <div class="prj_description">
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
                     molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
                     numquam blanditiis h
-                </p>
-            </div>
-        </div>
-        <div class="flex">
-            <div class="project_card flex"> <!-- for each finished project -->
-                <p>born2beRoot</p> <!-- project name-->
-                <!-- if bonus was done -->
-            </div>
-            <div class="prj_description">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                    molestiae quas vel sint commodi repudiandae cons
-                </p>
-            </div>
-        </div>
-        <div class="flex">
-            <div class="project_card flex"> <!-- for each finished project -->
-                <p>get_next_line</p> <!-- project name-->
-                <img class="bonus" src="images/star.svg" alt="Bonus"> <!-- if bonus was done -->
-            </div>
-            <div class="prj_description">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                    molestiae quas vel sint commodi repudiandae cons
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                    molestiae quas vel sint commodi repudiandae cons
                 </p>
             </div>
         </div>
