--- a/style-testing/portfolio.css
+++ b/style-testing/portfolio.css
@@ -104,12 +104,13 @@ header {
 .skills {
     grid-area: skills;
     border: 1px solid white;
-    padding: 60px;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    max-width: 475px;
+    max-width: 510px;
+    padding: 60px;
 }
+
 
 footer {
     grid-area: footer;
@@ -190,22 +191,8 @@ input:focus::placeholder {
     font-weight: bold;
 }
 
-.prj_description p {
+.prj_description p, .skill_card p {
     margin: 0;
-}
-
-.skill_card {
-    background: #262833;
-    border: 1px solid white;
-    width: fit-content;
-    margin: 10px;
-    padding: 15px 40px;
-    border-radius: 50px;
-    box-shadow: 10px 10px 5px 1px rgba(0, 0, 0, 0.2);
-    font-size: 1.5rem;
-    color: #cacaca;
-    margin-right: 20px;
-    font-size: small;
 }
 
 .prj_description {
@@ -260,10 +247,29 @@ input:focus::placeholder {
     padding: 10px 20px;
 }
 
+.skill_card {
+    margin: 30px 15px;
+    font-size: 1.2rem;;
+    justify-content: space-between
+}
+
 .skill_point {
     min-width: 10px;
-    min-height: 40px;
-    margin: 10px;
+    min-height: 10px;
+    margin: 5px;
     border-radius: 50px;
-    background-color: white;
+    background: linear-gradient(90deg, #d68b00 0%, #ffc400 100%);
+}
+
+.skill_list {
+    margin-left: 50px;
+    border-left: 1px solid white;
+}
+
+
+.skill_points {
+    background-color: #1a1c24;
+    border-radius: 50px;
+    padding: 5px;
+    margin-left: 10px;
 }
