--- a/style-testing/landing_page.css
+++ b/style-testing/landing_page.css
@@ -87,7 +87,7 @@ h1 span {
     font-size: 5rem;
     font-weight: bold;
     background: rgb(131,58,180);
-    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 100%);
+    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, #fd1d1d 100%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
