--- a/style-testing/portfolio.css
+++ b/style-testing/portfolio.css
@@ -22,11 +22,14 @@ body {
 }
 
 h1 {
-    margin-top: 0;
-    font-weight: normal;
-    font-size: 4rem;
+    margin: 0;
+    font-weight: bold;
+    font-size: 4.5rem;
     letter-spacing: 3px; 
     color: white;
+    border-bottom: 1px solid white;
+    border-left: 1px solid white;
+    padding: 5px 20px;
 }
 
 h2 {
@@ -36,6 +39,15 @@ h2 {
     border-bottom: 1px solid white;
     border-left: 1px solid white;
     padding: 5px 10px;
+}
+
+h1 + p {
+    color: #979797;
+    border-radius: 50px;
+    background-color: #3b3f50;
+    padding: 10px 30px;
+    font-weight: bold;
+    font-size: 1.5rem;
 }
 
 .flex {
@@ -76,20 +88,32 @@ header {
     grid-area: identification;
     border: 1px solid white;
     justify-content: flex-start;
+    padding: 60px;
 }
 
 .name {
     grid-area: identification;
-    justify-content: flex-start;
-    flex-grow: 1;
+    justify-content: center;
+    align-items: start;
     height: 100%;
+    flex-direction: column;
 }
 
 .contact {
     grid-area: contact;
     border: 1px solid white;
     justify-content: flex-start;
-    padding-inline: 20px;
+}
+
+.cross {
+    height: 100%;
+    border-right: 1px solid white;
+}
+
+.cross img {
+    width: 30px;
+    object-fit: contain;
+    margin-inline: 20px;
 }
 
 .projects {
@@ -97,7 +121,7 @@ header {
     flex-direction: column;
     align-items: flex-start;
     border: 1px solid white;
-    padding: 60px;
+    padding: 68px;
     padding-top: 0;
 }
 
@@ -107,8 +131,8 @@ header {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    max-width: 510px;
     padding: 60px;
+    padding-top: 0px;
 }
 
 
@@ -159,6 +183,7 @@ input:focus::placeholder {
 
 #pfp {
     border: 1px solid white;
+    object-fit: cover;
 }
 
 .contact_card {
