Separated version (with and without server), improved portfolio

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -12,7 +12,7 @@
     </header>
     <main class="flex">
         <div class="call_action">
-            <h1 for="searchbar">Grab Your <br><span>Skill Portfolio!</span></h1>
+            <h1 for="searchbar">Grab Your <br><span>42 Portfolio!</span></h1>
             <form method="POST" action="/generate_portfolio">
                 <input id="searchbar" name="username" type="search" placeholder="[ intra username ]" required>
             </form>
