added error handling

--- a/server/static/portfolio.css
+++ b/server/static/portfolio.css
@@ -264,8 +264,7 @@ input:focus::placeholder {
 }
 
 .skill_list {
-    margin-left: 50px;
-    border-left: 1px solid white;
+    margin-top: -20px;
 }
 
 
