More error handling

--- a/server/templates/template.html
+++ b/server/templates/template.html
@@ -32,7 +32,7 @@
                 </div>
 				{% if project.final_mark == 125 %}
                 <div class="bonus_card flex"> <!-- if bonus was done -->
-                    <img class="bonus" src="../static/images/star.svg" alt="Bonus"> 
+                    BONUS
                 </div>
 				{% endif %}
             </div>
