--- a/server/templates/template.html
+++ b/server/templates/template.html
@@ -48,8 +48,6 @@
             </div>
 			{% endfor %}
         </div>
-        <!-- -------------------------------------------------------------PROJECT BLOCKS (eliminate the rest) -->
-
     </div>
     <div class="skills flex">
         <h2>Skills</h2>
@@ -64,40 +62,10 @@
                 </div>
             </div>
 			{% endfor %} 
-    <!-- 
-            <div class="skill_card flex">
-                <p>Imperative Programming</p>
-                <div class="skill_points flex">
-                    <div class="skill_point"></div>
-                    <div class="skill_point"></div>
-                    <div class="skill_point"></div>
-                </div>
-            </div>  
-
-            <div class="skill_card flex">
-                <p>Graphics</p>
-                <div class="skill_points flex">
-                    <div class="skill_point"></div>
-                    <div class="skill_point"></div>
-                </div>
-            </div>  
-
-            <div class="skill_card flex">
-                <p>Unix</p>
-                <div class="skill_points flex">
-                    <div class="skill_point"></div>
-                    <div class="skill_point"></div>
-                    <div class="skill_point"></div>
-                </div>
-            </div>  
- -->
-
         </div>
-                                                        
-
     </div>
     <footer>
-        <p>42 School</p>
+        <a href="https://www.42lisboa.com/">42 Lisboa</a>
     </footer>
     </body>
 </html>
